<resources>
    <string name="app_name">Kasumi</string>
	<string name="item_accounts">%0 Accounts</string>
	<string name="item_account">%0 Account</string>
	<string name="last_loaded">Last Loaded: %1$s</string>
	<string name="last_loaded_never">Last Loaded: Never</string>
	<string name="id">ID: %1$s</string>

	<string name="server_name_jp">Japanese</string>
	
	<string name="menu_save">Save</string>
	<string name="menu_new">New Account</string>
	<string name="menu_search">Search</string>
	<string name="menu_sort">Sort</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_new_folder">New Folder</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_delete_gea">Delete GameEngineActivity</string>
	<string name="menu_import">Import Accounts</string>
	<string name="menu_backup">Backup Management</string>
	<string name="menu_qr">Scan QR</string>
	<string name="menu_debug">Debug Tools</string>

	<string name="year">year</string>
	<string name="month">month</string>
	<string name="day">day</string>
	<string name="hour">hour</string>
	<string name="minute">minute</string>
	<string name="second">second</string>

	<string name="years">years</string>
	<string name="months">months</string>
	<string name="days">days</string>
	<string name="hours">hours</string>
	<string name="minutes">minutes</string>
	<string name="seconds">seconds</string>

	<string name="ago"> ago</string>

	<string name="now">Just now</string>


    <string name="select">Select</string>
	<string name="rename_account">Rename Account</string>
	<string name="delete_account">Delete Account</string>
	<string name="move_account">Move Account</string>
	<string name="lock_account">Lock Account</string>
	<string name="get_qr">Get QR Code</string>

</resources>
